--- a/public/adduser.html
+++ b/public/adduser.html
@@ -29,6 +29,7 @@
         </tr>
         </table>
         <input type="submit" value="회원가입">
+        <!-- test2 branch check -->
     </form>
   </body>
 </html>
