--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,7 @@
             <td><input name = "password" type="password"></td>
         </tr>
         </table>
-        <input type="submit" value="회원가입">
+        <input type="submit" value="로그인">
         <!-- check test1 branch -->
         <!-- test2 branch check -->
     </form>
